Bootstrap modal and image upload template added

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
-        "cropperjs": "^1.5.11"
+        "cropperjs": "^1.5.11",
+        "croppie": "^2.6.5"
     }
 }
